--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <title>RSSchool CV</title>
 </head>
-<body>
-  
+<body class="page">
+  <h1>HELLO WORLD</h1>
 </body>
 </html>
