feat: add basic styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
   <link rel="stylesheet" href="style.css">
   <title>RSSchool CV</title>
 </head>
-<body class="page">
-  <h1>HELLO WORLD</h1>
+<body class="page theme theme_light theme_dark">
+  <header class="header">
+    <a href="#" class="logo">PORTFOLIO</a>
+    <ul>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </header>
+  <main class="container">
+    <h1>HELLO WORLD</h1>
+
+  </main>
+  <footer class="footer"></footer>
 </body>
 </html>
