feat: add avatar

--- a/index.html
+++ b/index.html
@@ -11,14 +11,23 @@
   <header class="header">
     <a href="#" class="logo">PORTFOLIO</a>
     <ul>
-      <li></li>
+      <li><a href="#meet">Hello</a></li>
       <li></li>
       <li></li>
     </ul>
+    <div class="toggler">
+      <span class="toggler__control"></span>
+    </div>
   </header>
   <main class="container">
-    <h1>HELLO WORLD</h1>
-
+    <h1 class="visually-hidden">Web-developer's personal portfolio</h1>
+    <section class="meet" id="meet">
+      <div class="avatar__wrapper">
+        <img class="avatar__photo" src="./img/pixel-bearded.jpg" alt="Pixel art happy bearded guy with arm raised" width="300" height="300">
+      </div>
+      <h2 class="meet__title">Hey, my name is Roman</h2>
+      <p class="meet__paragraph">and i'm front-end developer</p>
+    </section>
   </main>
   <footer class="footer"></footer>
 </body>
