feat: add header

--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Monoton&subset=latin&text=NicePortfolio&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>RSSchool CV</title>
 </head>
 <body class="page theme theme_light theme_dark">
   <header class="header">
-    <a href="#" class="logo">PORTFOLIO</a>
-    <ul>
-      <li><a href="#meet">Hello</a></li>
-      <li></li>
-      <li></li>
-    </ul>
+    <a href="#" class="logo">Nice Portfolio</a>
+    <nav class="navigation">
+      <ul class="navigation__list">
+        <li class="navigation__item"><a href="#meet">Hello</a></li>
+        <li class="navigation__item"><a href="#">Second</a></li>
+        <li class="navigation__item"><a href="#">Third</a></li>
+      </ul>
+    </nav>
     <div class="toggler">
       <span class="toggler__control"></span>
     </div>
