feat: implement first promo block

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="Description" content="Personal portfolio of web-developer">
   <link href="https://fonts.googleapis.com/css?family=Monoton&subset=latin&text=NicePortfolio&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./styles/style.css">
@@ -29,8 +30,17 @@
       <div class="avatar__wrapper">
         <img class="avatar__photo" src="./img/pixel-bearded.jpg" alt="Pixel art happy bearded guy with arm raised" width="300" height="300">
       </div>
-      <h2 class="meet__title">Hey, my name is Roman</h2>
-      <p class="meet__paragraph">and i'm front-end developer</p>
+      <h2 class="meet__title">
+        Hey,<br>
+        my name is Roman
+      </h2>
+      <p class="meet__paragraph">
+        and i'm front-end developer
+      </p>
+    </section>
+
+    <section class="about">
+      
     </section>
   </main>
   <footer class="footer"></footer>
