--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navigation">
       <ul class="navigation__list">
         <li class="navigation__item"><a href="#meet">Hello</a></li>
-        <li class="navigation__item"><a href="#">Second</a></li>
+        <li class="navigation__item"><a href="#about">About me</a></li>
         <li class="navigation__item"><a href="#">Third</a></li>
       </ul>
     </nav>
@@ -39,8 +39,15 @@
       </p>
     </section>
 
-    <section class="about">
-      
+    <section class="about" id="about">
+      <h2 class="about__title">Few words about me:</h2>
+      <p class="about__paragraph">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi assumenda ducimus minima voluptatum esse id doloremque sequi dolore quia. Ut voluptatibus, modi rem velit explicabo alias nobis neque autem dolor dolores saepe quia earum laborum, deleniti doloremque dicta? Nulla, illo labore!
+      </p>
+      <p class="about__paragraph">
+        These are not all the things that I could tell about myself.
+        You can read more about my professional skills below.
+      </p>
     </section>
   </main>
   <footer class="footer"></footer>
