feat: implement footer

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="Description" content="Personal portfolio of web-developer">
+  <link href="./styles/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Monoton&subset=latin&text=NicePortfolio&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="./styles/style.css">
-  <title>RSSchool CV</title>
+  <link href="https://fonts.googleapis.com/css?family=Quicksand&subset=latin&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Neucha&subset=latin&text=WЯIT3MePLES!&display=swap"
+    rel="stylesheet">
+  <title>My Nice Portfolio</title>
 </head>
 <body class="page theme theme_light theme_dark">
   <header class="header">
@@ -17,7 +21,7 @@
       <ul class="navigation__list">
         <li class="navigation__item"><a href="#meet">Hello</a></li>
         <li class="navigation__item"><a href="#about">About me</a></li>
-        <li class="navigation__item"><a href="#">Third</a></li>
+        <li class="navigation__item"><a href="#skills">Third</a></li>
       </ul>
     </nav>
     <div class="toggler">
@@ -45,11 +49,19 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi assumenda ducimus minima voluptatum esse id doloremque sequi dolore quia. Ut voluptatibus, modi rem velit explicabo alias nobis neque autem dolor dolores saepe quia earum laborum, deleniti doloremque dicta? Nulla, illo labore!
       </p>
       <p class="about__paragraph">
-        These are not all the things that I could tell about myself.
+        These are <u>not all the things</u> that I could tell about myself.
         You can read more about my professional skills below.
       </p>
     </section>
+
+    <section class="skills" id="skills">
+      <h2 class="skills__title">My skills:</h2>
+    </section>
   </main>
-  <footer class="footer"></footer>
+  <footer class="footer">
+    <a class="footer__link contacts__link_twitter" href="https://twitter.com/tensegrity666" target="_blank" rel="noopener>
+      <span class="footer__description">&#10229; WЯIT3 Me PLES!</span>
+    </a>
+  </footer>
 </body>
 </html>
