fix: fix typo in footer__link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </section>
   </main>
   <footer class="footer">
-    <a class="footer__link contacts__link_twitter" href="https://twitter.com/tensegrity666" target="_blank" rel="noopener>
+    <a class="footer__link contacts__link_twitter" href="https://twitter.com/tensegrity666" target="_blank" rel="noopener">
       <span class="footer__description">&#10229; WЯIT3 Me PLES!</span>
     </a>
   </footer>
