--- a/index.html
+++ b/index.html
@@ -14,57 +14,64 @@
     rel="stylesheet">
   <title>My Nice Portfolio</title>
 </head>
-<body class="page theme theme_light theme_dark">
+<body class="page theme theme-light theme-dark">
   <main>
     <div class="sticky-container">
       <header class="header">
         <a href="#" class="logo">Nice Portfolio</a>
         <nav class="navigation">
-          <ul class="navigation__list">
-            <li class="navigation__item"><a href="#meet">Hello</a></li>
-            <li class="navigation__item"><a href="#about">About me</a></li>
-            <li class="navigation__item"><a href="#skills">Third</a></li>
+          <ul class="navigation--list">
+            <li class="navigation--item"><a href="#meet">Hello</a></li>
+            <li class="navigation--item"><a href="#about">About me</a></li>
+            <li class="navigation--item"><a href="#skills">Third</a></li>
           </ul>
         </nav>
         <div class="toggler">
-          <span class="toggler__control"></span>
+          <span class="toggler--control"></span>
         </div>
       </header>
       <h1 class="visually-hidden">Web-developer's personal portfolio</h1>
       <section class="meet" id="meet">
-        <div class="avatar__wrapper">
-          <img class="avatar__photo" src="./assets/bearded-guy.png" alt="Pixel art happy bearded guy with arm raised" width="300" height="300">
+        <div class="avatar--wrapper">
+          <img class="avatar--photo" src="./assets/bearded-guy.png" alt="Pixel art happy bearded guy with arm raised" width="300" height="300">
         </div>
-        <h2 class="meet__title">
+        <h2 class="meet--title">
           Hey,<br>
           my name is Roman
         </h2>
-        <p class="meet__paragraph">
+        <p class="meet--paragraph">
           and i'm front-end developer
         </p>
       </section>
     </div>
 
     <div class="container">
-      <section class="about" id="about">
-        <h2 class="about__title">Few words about me:</h2>
-        <p class="about__paragraph">
+      <section class="about section" id="about">
+        <h2 class="about--title title">Few words about me:</h2>
+        <p class="about--paragraph">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi assumenda ducimus minima voluptatum esse id doloremque sequi dolore quia. Ut voluptatibus, modi rem velit explicabo alias nobis neque autem dolor dolores saepe quia earum laborum, deleniti doloremque dicta? Nulla, illo labore!
         </p>
-        <p class="about__paragraph">
+        <p class="about--paragraph">
           These are <u>not all the things</u> that I could tell about myself.
           You can read more about my professional skills below.
         </p>
       </section>
 
-      <section class="skills" id="skills">
-        <h2 class="skills__title">My skills:</h2>
+      <section class="skills section" id="skills">
+        <h2 class="skills--title title">My skills:</h2>
+      </section>
+
+      <section class="projects section" id="">
+        <h2 class="projects--title title">There are some of my projects</h2>
+        <div class="soon">
+          <span class="soon--text">coming soon...</span>
+        </div>
       </section>
     </div>
   </main>
   <footer class="footer">
-    <a class="footer__link contacts__link_twitter" href="https://twitter.com/tensegrity666" target="_blank" rel="noopener">
-      <span class="footer__description">&#10229; WЯIT3 Me PLES!</span>
+    <a class="footer--link contacts--link-twitter" href="https://twitter.com/tensegrity666" target="_blank" rel="noopener">
+      <span class="footer--description">&#10229; WЯIT3 Me PLES!</span>
     </a>
   </footer>
 </body>
