feat: implement navigation

--- a/index.html
+++ b/index.html
@@ -44,9 +44,21 @@
         <a href="#" class="logo">Nice Portfolio</a>
         <nav class="navigation">
           <ul class="navigation--list">
-            <li class="navigation--item"><a href="#meet">Hello</a></li>
-            <li class="navigation--item"><a href="#about">About me</a></li>
-            <li class="navigation--item"><a href="#skills">Third</a></li>
+            <li class="navigation--item">
+              <a class="navigation--item-link" href="#meet">Hello</a>
+            </li>
+            <li class="navigation--item">
+              <a class="navigation--item-link" href="#about">About me</a>
+            </li>
+            <li class="navigation--item">
+              <a class="navigation--item-link" href="#skills">Skills</a>
+            </li>
+            <li class="navigation--item">
+              <a class="navigation--item-link" href="#projects">My projects</a>
+            </li>
+            <li class="navigation--item">
+              <a class="navigation--item-link" href="#contacts">Contacts</a>
+            </li>
           </ul>
         </nav>
         <div class="toggler">
