feat: add content to contacts and about

--- a/index.html
+++ b/index.html
@@ -69,7 +69,23 @@
       <section class="about section" id="about">
         <h2 class="about--title title">Few words about me</h2>
         <p class="about--paragraph">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi assumenda ducimus minima voluptatum esse id doloremque sequi dolore quia. Ut voluptatibus, modi rem velit explicabo alias nobis neque autem dolor dolores saepe quia earum laborum, deleniti doloremque dicta? Nulla, illo labore!
+          <h3 class="about--title title subtitle">Education</h3>
+          <ul class="about--paragraph">
+            <li>
+              For several years (since 2005 to 2008) I studied at St. Petersburg State
+              University of Mechanics and Optics (on Department of Computer Engineering), but
+              did not graduate.
+            </li>
+            <li>
+              Since 2019, I have been engaged in independent study of web development on
+              materials available on the Internet, and now I spend all my time on it.
+            </li>
+          </ul>
+          <h3 class="about--title title subtitle">Languages</h3>
+          <ul class="about--paragraph">
+            <li>English: pre-intermediate (but I'm improving it)</li>
+            <li>Native language is Russian.</li>
+          </ul>
         </p>
         <p class="about--paragraph">
           These are <u>not all the things</u> that I could tell about myself.
@@ -116,9 +132,17 @@
 
       <section class="section" id="contacts">
         <h2 class="title">Contact with me</h2>
-        <div class="soon">
-          <span class="soon--text">coming soon...</span>
-        </div>
+          <ul class="contacts--paragraph">
+            <li class="navigation--item">
+              <a class="navigation--item-link" href="mailto:tensegrity666@gmail.com">E-mail</a>
+            </li>
+            <li class="navigation--item">
+              <a class="navigation--item-link" href="https://www.linkedin.com/in/roman-yakovlev/" target="_blank" rel="noopener noreferrer">linkedin</a>
+            </li>
+            <li class="navigation--item">
+              <a class="navigation--item-link" href="https://twitter.com/tensegrity666" target="_blank" rel="noopener noreferrer">Twitter</a>
+            </li>
+          </ul>
       </section>
     </div>
   </main>
