refactor: fix mobile width

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="container">
       <section class="about section" id="about">
         <h2 class="about--title title">Few words about me</h2>
-        <p class="about--paragraph">
+        <section class="about--paragraph">
           <h3 class="about--title title subtitle">Education</h3>
           <ul class="about--paragraph">
             <li>
@@ -86,7 +86,7 @@
             <li>English: pre-intermediate (but I'm improving it)</li>
             <li>Native language is Russian.</li>
           </ul>
-        </p>
+        </section>
         <p class="about--paragraph">
           These are <u>not all the things</u> that I could tell about myself.
           You can read more about my professional skills below.
@@ -133,24 +133,24 @@
       <section class="section" id="contacts">
         <h2 class="title">Contact with me</h2>
           <ul class="contacts--paragraph">
-            <li class="navigation--item">
+            <li class="navigation--item contacts--item">
               <a class="navigation--item-link" href="mailto:tensegrity666@gmail.com">E-mail</a>
             </li>
-            <li class="navigation--item">
+            <li class="navigation--item contacts--item">
               <a class="navigation--item-link" href="https://www.linkedin.com/in/roman-yakovlev/" target="_blank" rel="noopener noreferrer">linkedin</a>
             </li>
-            <li class="navigation--item">
+            <li class="navigation--item contacts--item">
               <a class="navigation--item-link" href="https://twitter.com/tensegrity666" target="_blank" rel="noopener noreferrer">Twitter</a>
+            </li>
+            <li class="navigation--item contacts--item">
+              <a class="navigation--item-link" href="https://twitter.com/tensegrity666"
+                target="_blank" rel="noopener noreferrer">Twitter</a>
             </li>
           </ul>
       </section>
     </div>
   </main>
-  <footer class="footer">
-    <a class="footer--link contacts--link-twitter" href="https://twitter.com/tensegrity666" target="_blank" rel="noopener">
-      <span class="footer--description">&#10229; WЯIT3 Me PLES!</span>
-    </a>
-  </footer>
+  <footer></footer>
 
   <script>
     'Use strict';
